--- a/plugins/catalog/package.json
+++ b/plugins/catalog/package.json
@@ -21,6 +21,7 @@
     "clean": "backstage-cli clean"
   },
   "dependencies": {
+    "@backstage/catalog-client": "^0.1.1",
     "@backstage/catalog-model": "^0.1.1",
     "@backstage/core": "^0.1.1",
     "@backstage/plugin-scaffolder": "^0.1.1",
